--- a/style.css
+++ b/style.css
@@ -1,113 +1,142 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kanit', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
-body{
+section{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #dfdfdf ;
-}
-.login-box{
-    display: flex;
-    justify-content: center ;
-    flex-direction: column;
-    width: 440px;
-    height: 480px;
-    padding: 30px;
-
-}
-.login-header{
-    text-align: center;
-    margin: 20px 0 40px 0;
-
-}
-.login-header header{
-    color: #333;
-    font-size: 30px;
-    font-weight: 600;
-
-}
-.input-box .input-field{
     width: 100%;
-    height: 60px;
-    font-size: 17;
-    padding: 0 25px;
-    margin-bottom: 15px;
-    border-radius: 30px;
-    border: none;
-    box-shadow: 0px 5px 1px rgba(0, 0, 0, 0.05);
-    outline: none;
-    transition: .3s;
+    background: url(imagens/imagem03.jpg) no-repeat ;
+    background-size: 230vh 100vh;
+    background-position: center;
+}
 
-}
-.placeholder{
-    font-weight: 500;
-    color: #222;
-}
-.input-field:focus{
-    width: 105%;
-}
-.forgot{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-section{
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    color:#555;
-}
-#check{
-    margin-right: 10px;
-}
-a{
-    text-decoration: none;
-}
-a:hover{
-    text-decoration: underline;
-}
-section a{
-    color:#555
-}
-.input-submit{
+.form-box {
+    width: 400px;
+    height: 450px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(5px);
+
 }
-.submit-btn{
-    width: 100%;
-    height: 60px;
-    background: #222;
-    border: none;
-    border-radius: 30px;
-    cursor: point;
-    transition: .3s;
-}
-.input-submit label{
-    position: absolute;
-    top: 45%;
-    left: 50%;
+h2{
+    font-size: 2em;
     color: #fff;
-    -webkit-transform:  translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform:translate(-50%, -50%);
+    text-align: center;
+
+}
+.input-box{
+    position: relative;
+    margin: 30px 0px;
+    width: 310px;
+    border-bottom: 2px solid #fff;
+}
+.input-box label{
+    position: absolute;
+    left: 5px;
+    top: 50%;
+    transform: translateY(-45%);
+    font-size: 1em;
+    color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
+
+}
+
+input:focus~label,
+input:valid~label{
+    top: -5px;
+
+}
+
+.input-box input{
+
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    outline: none;
+    border: none;
+    padding: 0 35px 0 5px;
+    font-size: 1em;
+    color: #fff;
+}
+
+.forget{
+    margin: -15px 0 30px; 
+    font-size: 0.9em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+
+}
+
+.forget label a{ 
+    color: #fff;
+    text-decoration: none;  
+}
+
+.forget label a:hover{
+    text-decoration: underline;
+    text-underline-offset: 2px;
+}
+
+.forget label input{
+    margin-right: 3px;
+    transform: translateY(2px);
+    background: transparent;
+}
+
+button{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #fff;
+    outline: none;
+    border: none;
+    font-size: 1em;
+    font-weight: 600;
     cursor: pointer;
 }
-.submit-btn:hover{
-    background: #000;
-    transform: scale(1.05,1);
+
+button:hover {
+    opacity: 0.7;
 }
-.sign-up-link{
-    text-align: center;
-    font-size: 15px;
-    margin-top: 20px;
+
+.register {
+    margin: 15px 0 30px;
+    font-size: 0.9em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
 }
-.sign-up-link a{
-    color: #000;
+.register label a {
+    color: #fff;
+    text-decoration: none;
     font-weight: 600;
 }
+.register label a:hover {
+    text-decoration: underline;
+    text-underline-offset: 2px;
+
+}
+
+.input-box ion-icon{
+    position: absolute;
+    top: 20%;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+}
+
